@@ -11,7 +11,7 @@
 
 Необходимый софт
 ----------------------------------------
-* Openjdk 11
+* Openjdk 17
 * maven => 3.9.2
 
 Описание ключевой конфигурации модуля
@@ -52,7 +52,7 @@
     
 2. Запустить проект с помощью команды:
 
-    java -jar /target/eca-external-api-tests.jar
+java --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED -jar target/eca-external-api-tests.jar
          
 3. Страница с документацией swagger находится по адресу http://[host]:[port]/eca-external-api-tests/swagger-ui.html, где host и port
 соответственно адрес машины и порт на котором развернуто приложение.
